[package]
name = "cargo-options"
version = "0.7.4"
edition = "2021"
description = "Reusable common Cargo command line options"
license = "MIT"
keywords = ["clap", "cargo", "cli"]
readme = "README.md"
repository = "https://github.com/messense/cargo-options"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.2"
clap = { version = "4.0.0", features = ["derive", "env", "wrap_help", "unstable-styles"] }

[dev-dependencies]
trycmd = { version = "0.14.0", features = ["examples"] }
